Added DUMS and DAMS exam options

--- a/admin.html
+++ b/admin.html
@@ -80,14 +80,18 @@
                 
                 <label>পরীক্ষার নাম:</label>
                 <select id="stdExam" required>
-                    <option value="">নির্বাচন করুন...</option>
-                    <option value="SSC">SSC Result</option>
-                    <option value="HSC">HSC Result</option>
-                    <option value="BBA 1st Year">BBA 1st Year</option>
-                    <option value="BBA 2nd Year">BBA 2nd Year</option>
-                    <option value="BBA 3rd Year">BBA 3rd Year</option>
-                    <option value="BBA 4th Year">BBA 4th Year</option>
-                </select>
+    <option value="">নির্বাচন করুন...</option>
+    <option value="SSC">SSC Result</option>
+    <option value="HSC">HSC Result</option>
+    <!-- নতুন অপশন -->
+    <option value="DUMS 1st Year">DUMS 1st Year</option>
+    <option value="DUMS 2nd Year">DUMS 2nd Year</option>
+    <option value="DUMS 3rd Year">DUMS 3rd Year</option>
+    <option value="DUMS 4th Year">DUMS 4th Year</option>
+    <option value="DUMS Final">DUMS Final Professional</option>
+    <option value="DAMS 1st Year">DAMS 1st Year</option>
+    <option value="DAMS Final">DAMS Final Professional</option>
+</select>
 
                 <label>ফলাফল (GPA):</label>
                 <input type="text" id="stdGPA" placeholder="যেমন: 5.00" required>
