--- a/result.html
+++ b/result.html
@@ -48,7 +48,18 @@
     <!-- সার্চ ফর্ম -->
     <div class="search-container">
         <h3>📂 ফলাফল অনুসন্ধান</h3>
-        <select id="examName"><option value="SSC">SSC/Dakhil</option><option value="HSC">HSC/Alim</option></select>
+        <select id="examName">
+    <option value="SSC">SSC/Dakhil</option>
+    <option value="HSC">HSC/Alim</option>
+    <!-- নতুন অপশন -->
+    <option value="DUMS 1st Year">DUMS 1st Year</option>
+    <option value="DUMS 2nd Year">DUMS 2nd Year</option>
+    <option value="DUMS 3rd Year">DUMS 3rd Year</option>
+    <option value="DUMS 4th Year">DUMS 4th Year</option>
+    <option value="DUMS Final">DUMS Final Professional</option>
+    <option value="DAMS 1st Year">DAMS 1st Year</option>
+    <option value="DAMS Final">DAMS Final Professional</option>
+</select>
         <select id="year"><option value="2025">2025</option></select>
         <input type="text" id="roll" placeholder="Roll No" required>
         <button onclick="searchResult()">Get Result</button>
