Added Student Verification Page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <!-- নতুন ফলাফল বাটন -->
         <a href="/result">ফলাফল</a>
         <a href="/admin" style="background: #e74c3c;">অ্যাডমিন প্যানেল</a>
+        <a href="/verification">ভেরিফিকেশন সার্টিফিকেট</a>
     </nav>
 
     <!-- Scrolling News -->
