--- a/admin.html
+++ b/admin.html
@@ -56,6 +56,10 @@
         <a href="/result">ফলাফল</a>
         <a href="/admin" style="background: #e74c3c;">অ্যাডমিন</a>
         <a href="#" onclick="logout()" style="background: red;">লগআউট</a>
+            
+<a href="/verification">ভেরিফিকেশন সার্টিফিকেট</a>
+
+  
     </nav>
 
     <div class="container">
